--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -2,9 +2,8 @@
 
 <h1>Help</h1>
 <p>
-   Get help on the Ruby on Rails Tutorial at the
-<a href="http://railstutorial.org/help">Rails Tutorial help page</a>.
-To get help on this microblogger, see the
+   
+To learn Ruby on Rails and how to build an application like this one, see the
 <a href="http://railstutorial.org/book">Rails Tutorial book</a>.
 </p>
 	
